tests/fixtures/errors/type_mismatch_comparison.lazy
// error: Type mismatch
//
// Expected `integer` for comparison (<), but found `string`.
//
// help: Make sure you're using compatible types for this operation.

result = 5 < "hello"
result
